<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.physicaltrack__ed5042_individual_project_19190859.MainActivity" >
        <TextView
            android:id="@+id/introductiontext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maininstructiontext"/>

        <Button
            android:id="@+id/setuserinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="30dp"
            android:text="@string/setinfoactivitybuttontext" />

        <Button
            android:id="@+id/getuserinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="334dp"
            android:text="@string/viewinfoactivitybuttontext" />

        <Button
            android:id="@+id/usepedometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/usepedometeractivitybuttontext" />
    </RelativeLayout>
</ScrollView>